# coffee_break

./: Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
examples/: friday_afternoon.rs  have_a_coffee.rs  stretch_your_legs.rs
src/: lib.rs
tests/: break.rs
