[package]
name = "coffee_break"
version = "1.0.0"
authors = ["Radek Vít <radekvitr@gmail.com>"]
edition = "2021"
rust-version = "1.63.0"
description = "Take a break while your code compiles"
repository = "https://github.com/radekvit/coffee_break"
license = "JSON"
keywords = ["coffee", "relax", "blazing-fast"]
categories = ["development-tools", "development-tools::build-utils"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ra-friendly", "check-friendly"]
ra-friendly = []
check-friendly = []

[dependencies]
syn = { version = "2.0.57", default-features = false, features = ["proc-macro", "parsing"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-flags = ["--cfg=docsrs"]
